# vacation-agent

./: .gitignore  README.md
agent/: pyproject.toml
agent/app/: __init__.py  main.py  paths.py
agent/app/api/v1/: router.py
agent/app/api/v1/endpoints/: agent.py
agent/app/configs/: config.yaml
agent/app/modules/: intent_skill.py  rag_skill.py
agent/app/schemas/: agent.py  config.py  intent_config.py  rag_skill.py
common-lib/: logging.py
model-gateway/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
model-gateway/app/: __init__.py  main.py
model-gateway/app/api/v1/: router.py
model-gateway/app/api/v1/endpoints/: embedding.py  llm.py  slm.py
model-gateway/app/configs/: config.yaml
model-gateway/app/helper/: inference.py
model-gateway/app/schemas/: config.py  gateway.py
rag/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
rag/app/: main.py  paths.py
rag/app/api/v1/: router.py
rag/app/api/v1/endpoints/: rag_engine.py
rag/app/configs/: config.yaml
rag/app/modules/: google_integration.py  pinecone.py
rag/app/schemas/: config.py  google_sheets.py
